# Auction-Equilibrium-Numerics

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: README.md
examples/: README.md
src/auction_equilibrium_numerics/: __init__.py
src/auction_equilibrium_numerics/benchmarks/: __init__.py  first_price.py
src/auction_equilibrium_numerics/data/: __init__.py  dnr_timber.py
src/auction_equilibrium_numerics/diagnostics/: __init__.py  boundary_conditions.py  convergence.py  monotonicity.py  residuals.py
src/auction_equilibrium_numerics/estimation/: __init__.py  bid_distribution.py  gpv.py  simple_parametric.py
src/auction_equilibrium_numerics/first_price/: __init__.py  common.py  fixed_point.py  polynomial.py  shooting.py
src/auction_equilibrium_numerics/policy/: __init__.py  counterfactuals.py  reserve_price.py  revenue.py  timber_counterfactual.py
src/auction_equilibrium_numerics/primitives/: __init__.py  auction.py  bidder.py  distributions.py  procurement.py
src/auction_equilibrium_numerics/solvers/: __init__.py  _shared.py  bvp_collocation.py  fixed_point.py  polynomial.py  shooting.py
tests/: test_boundary_conditions.py  test_dnr_timber.py  test_gpv_recovery.py  test_optimal_reserve.py  test_package.py  test_revenue_counterfactual.py  test_solver_agreement.py  test_symmetric_uniform.py  test_timber_counterfactual.py
