[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "auction-equilibrium-numerics"
version = "0.1.0"
description = "JAX-based Python package for auction equilibrium numerics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "MikeyBike", email = "iacunah3ad@gmail.com" }
]
dependencies = [
  "jax>=0.4.30",
  "jaxlib>=0.4.30",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
]

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pre-commit>=4.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auction_equilibrium_numerics"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/auction_equilibrium_numerics --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
